--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -129,9 +129,25 @@ for(i in length(df[,1])){
   df$chicago_gotprecip = ifelse(df$chicago_precip > 0,1,0)
   df$nyc_gotprecip = ifelse(df$nyc_precip > 0,1,0)
 }
-df %>% 
-  mean(chicago_gotprecip) %>% 
-  mean(seattle_gotprecip) %>% 
-  mean(nyc_gotprecip)
+precip_chi = mean(df$chicago_gotprecip)
+precip_sea = mean(df$seattle_gotprecip) 
+precip_nyc = mean(df$nyc_gotprecip)
+
+df$chicago_macloud = 0
+df$chicago_matemp = 0
+df$seattle_macloud = 0
+df$seattle_matemp = 0
+df$nyc_macloud = 0
+df$nyc_matemp = 0
+i = 12
+# moving average of temp and cloud cover to better see trend
+for(i in 12:nrow(df)){
+  df$chicago_macloud[i] = mean(df$chicago_cloudcover[i-11:i])
+  df$chicago_matemp[i] = mean(df$chicago_temp[i-11:i])
+  df$seattle_macloud[i] = mean(df$seattle_cloudcover[i-11:i])
+  df$seattle_matemp[i] = mean(df$seattle_temp[i-11:i])
+  df$nyc_macloud[i] = mean(df$nyc_cloudcover[i-11:i])
+  df$nyc_matemp[i] = mean(df$nyc_temp[i-11:i])
+}
 
 ```
