write intro and dataprocessing paragraphs of report

--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -14,4 +14,12 @@ library(stringr)
 library(readxl)
 ```
 
+**Introduction**
 
+We set out to see how weather in the financial hubs of the United States might affect the stock market as a whole. To do this, we used two years worth of historical data detailing weather data from New York City, Chicago, and Seattle. The variables measured were mean temperature, precipitation, precipitation cover, and cloud cover. We paired this with data on the Dow Jones and NASDAQ from the same period. 
+
+**Data Processing**
+
+The first step of processing the data was to only select the closing price of the Dow Jones and NASDAQ in order to get a consistent measure of the two. Then, we bound the two together to get a data frame of our two financial indicators along with the associated dates. After this, we created a unique weather data frame for each city and only took measurements from 10/12/2020 to 10/12/2022. Similarly to the financial data frame, we bound these three together into one data frame. Each measurement of the weather was split into three different columns, one for each city. This was so that we didn't have repeating dates and could graph them more like time series data. The final step of processing the data was to combine the financial and weather data frames into one final data frame. We did this by left joining the financial data frame to the weather data frame. This cut out the observations of weather variables that did not fall on a trading day but made it so we did not have any NA observations of either the Dow Jones or the NASDAQ. 
+
+**Findings**
