--- a/scripts/exploratory_analysis.Rmd
+++ b/scripts/exploratory_analysis.Rmd
@@ -4,7 +4,9 @@ author: "Kade Aldrich, Benjamin Munkers"
 date: '2022-11-10'
 output: pdf_document
 ---
-
+```{r include = FALSE}
+source("main.R")
+```
 
 **Introduction**
 
@@ -15,6 +17,29 @@ We set out to see how weather in the financial hubs of the United States might a
 The first step of processing the data was to only select the closing price of the Dow Jones and NASDAQ in order to get a consistent measure of the two. Then, we bound the two together to get a data frame of our two financial indicators along with the associated dates. After this, we created a unique weather data frame for each city and only took measurements from 10/12/2020 to 10/12/2022. Similarly to the financial data frame, we bound these three together into one data frame. Each measurement of the weather was split into three different columns, one for each city. This was so that we didn't have repeating dates and could graph them more like time series data. The final step of processing the data was to combine the financial and weather data frames into one final data frame. We did this by left joining the financial data frame to the weather data frame. This cut out the observations of weather variables that did not fall on a trading day but made it so we did not have any NA observations of either the Dow Jones or the NASDAQ. 
 
 **Findings**
+After we processed the data and consolidated it into one data frame, it was time to begin the exploratory analysis. The first relationship we wanted to investigate was the effect of temperature for each city on the Dow Jones Industrial Average. Our first try at this yielded no real results as it was impossible to glean any relation.
+
+```{r}
+ma_temp_plot + dow_plot
+```
+
+The next thought we had was to see if this relationship presented itself through the seasons. The idea behind this was that in Spring, the temperatures are rising which might make people happier and companies more productive. We created 4 seasonal factor variables for the spring of 2021 through the winter of 2021/22. There seems to be a very strong relationship in the trend of the Dow Jones and the trend of temperature for the three cities. It is extremely likely that there are many unaccounted for factors which promote economic growth in the spring so this is not a rock-solid takeaway. Never the less, it could warrant more attention.
+
+```{r}
+ma_temp_plot_spring + dow_plot_spring
+```
+
+Similarly, we wanted to examine the Dow Jones and temperature over the course of the Fall. In looking at the two graphs, there does not seem to be a cut and dry relationship like the one we saw in Spring. The Dow Jones experiences high volatility and a possible upwards trend while the temperature steadily drops. 
+
+```{r}
+ma_temp_plot_fall + dow_plot_fall
+```
+
+Lastly, we wanted to explore if cloud cover over New York City was a predictor of the NASDAQ. The idea being that the more gloomy a day is in the trading capital of the world, the more likely it is that stock prices will go down. In reality, there doesn't seem to be a relationship between the two that is readily apparent. The large spike in cloud cover around the winter does seem to lineup with the peak value of the NASDAQ around the same time but without an econometric analysis, we cannot say whether or not this is true. 
+
+```{r}
+ma_cloud_plot_nyc + ndaq_plot
+```
 
 After processing our data we took a look into our variables and the relation they had to each other. Initially we found general information that could be useful like the percentage of rain a city got over the time period, which was New York City by 0.8%. We also looked at a graph for precipitation coverage, cloud cover and temperature combining all three cities into one graph for each variable. This helped show us that we needed to graph some of the variables in a more visible way, specifically, rain cover and cloud cover. In order to show these variables we took a moving average of them as well as the temperature to see the trends better. We can see this best when comparing our initial cloud cover plot and our moving average cloud cover plot. With this moving average cloud cover graph, we can see a trend of less clouds in the summer in Seattle and more in the winter while New York City and Chicago don't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which helps them have smaller temperature spikes and dips. Finally we took a look at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. We did this by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
 
