--- a/scripts/exploratory_analysis.Rmd
+++ b/scripts/exploratory_analysis.Rmd
@@ -13,6 +13,10 @@ We set out to see how weather in the financial hubs of the United States might a
 
 The first step of processing the data was to only select the closing price of the Dow Jones and NASDAQ in order to get a consistent measure of the two. Then, we bound the two together to get a data frame of our two financial indicators along with the associated dates. After this, we created a unique weather data frame for each city and only took measurements from 10/12/2020 to 10/12/2022. Similarly to the financial data frame, we bound these three together into one data frame. Each measurement of the weather was split into three different columns, one for each city. This was so that we didn't have repeating dates and could graph them more like time series data. The final step of processing the data was to combine the financial and weather data frames into one final data frame. We did this by left joining the financial data frame to the weather data frame. This cut out the observations of weather variables that did not fall on a trading day but made it so we did not have any NA observations of either the Dow Jones or the NASDAQ. 
 
+**Beginnings of Exploratory Analysis**
+
+After processing our data we took a look into our variables and the relation they had to each other. Initially we found general information that could be useful like the percentage of rain a city got over the time period, which was New York City by 0.8%. We also looked at a graph for precipitation coverage, cloud cover and temperature combining all three cities into one graph for each variable. This helped show us that we needed to graph some of the variables in a more visible way, specifically, rain cover and cloud cover. In order to show these variables we took a moving average of them as well as the temperature to see the trends better. We can see this best when comparing our initial cloud cover plot and our moving average cloud cover plot. With this moving average cloud cover graph, we can see a trend of less clouds in the summer in Seattle and more in the winter while New York City and Chicago don't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which helps them have smaller temperature spikes and dips. Finally we took a look at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. We did this by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
+
 **Findings**
 
 After we processed the data and consolidated it into one data frame, it was time to begin the exploratory analysis. The first relationship we wanted to investigate was the effect of temperature for each city on the Dow Jones Industrial Average. Our first try at this yielded no real results as it was impossible to glean any relation.
@@ -38,7 +42,5 @@ Lastly, we wanted to explore if cloud cover over New York City was a predictor o
 ```{r}
 ma_cloud_plot_nyc + ndaq_plot
 ```
-
-After processing our data we took a look into our variables and the relation they had to each other. Initially we found general information that could be useful like the percentage of rain a city got over the time period, which was New York City by 0.8%. We also looked at a graph for precipitation coverage, cloud cover and temperature combining all three cities into one graph for each variable. This helped show us that we needed to graph some of the variables in a more visible way, specifically, rain cover and cloud cover. In order to show these variables we took a moving average of them as well as the temperature to see the trends better. We can see this best when comparing our initial cloud cover plot and our moving average cloud cover plot. With this moving average cloud cover graph, we can see a trend of less clouds in the summer in Seattle and more in the winter while New York City and Chicago don't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which helps them have smaller temperature spikes and dips. Finally we took a look at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. We did this by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
 
 Next we took an initial look at comparing our weather variables with the indexes. We did this by first comparing the graphs we have for temperature and index. This yielded that there doesn't appear to be an overarching relation to seasonality between temperature and the index. We can then assume the same is true for the cloud cover in Seattle since that graph also follows the seasonality for temperature. With our temperature and index comparison, we did see some large downward slopes in the index when there was a large temperature dip mainly in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appears the effect is mainly when there is abnormal changes in the temperature and not the normal ups and downs that we experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison as the variance was still very high even after the moving average was applied. That being said, we did see that there is a rise in cloud cover that is very similar to the rise in the indexes in the start of 2022. This is an important note for our study because it could mean that the cloud cover could have the opposite effect on the market from what we thought it would de. We hypothesized that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover leads to people being inside and spend more time working with the markets or investing more into the market. 
