--- a/scripts/exploratory_analysis.Rmd
+++ b/scripts/exploratory_analysis.Rmd
@@ -43,4 +43,6 @@ Lastly, we wanted to explore if cloud cover over New York City was a predictor o
 ma_cloud_plot_nyc + ndaq_plot
 ```
 
-Next we took an initial look at comparing our weather variables with the indexes. We did this by first comparing the graphs we have for temperature and index. This yielded that there doesn't appear to be an overarching relation to seasonality between temperature and the index. We can then assume the same is true for the cloud cover in Seattle since that graph also follows the seasonality for temperature. With our temperature and index comparison, we did see some large downward slopes in the index when there was a large temperature dip mainly in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appears the effect is mainly when there is abnormal changes in the temperature and not the normal ups and downs that we experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison as the variance was still very high even after the moving average was applied. That being said, we did see that there is a rise in cloud cover that is very similar to the rise in the indexes in the start of 2022. This is an important note for our study because it could mean that the cloud cover could have the opposite effect on the market from what we thought it would de. We hypothesized that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover leads to people being inside and spend more time working with the markets or investing more into the market. 
+**Conclusion**
+
+Next, In summary, we took an initial look at comparing our weather variables with the indexes. We did this by first comparing the graphs we have for temperature and index. This yielded that there doesn't appear to be an overarching relation to seasonality between temperature and the index. We can then assume the same is true for the cloud cover in Seattle since that graph also follows the seasonality for temperature. With our temperature and index comparison, we did see some large downward slopes in the index when there was a large temperature dip mainly in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appears the effect is mainly when there is abnormal changes in the temperature and not the normal ups and downs that we experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison as the variance was still very high even after the moving average was applied. That being said, we did see that there is a rise in cloud cover that is very similar to the rise in the indexes in the start of 2022. This is an important note for our study because it could mean that the cloud cover could have the opposite effect on the market from what we thought it would de. We hypothesized that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover leads to people being inside and spend more time working with the markets or investing more into the market. 
