--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -5,6 +5,10 @@ date: '2022-11-10'
 output: pdf_document
 ---
 
+```{r echo = FALSE, fig.align='center', out.width = '100%'}
+knitr::include_graphics("Images/tempxdow.png")
+```
+
 **Introduction**
 
 An endless number of variables effect the condition of the stock market. We set out to determine a relationship between the stock market and just one of those variables. If the day-to-day emotions of traders, analysts, portfolio managers and otherwise in major financial centers are affected by the weather, that effect might be noticeable with the right visualizations. To do this, we used two years worth of historical data detailing weather data from New York City, Chicago, and Seattle. The variables measured were mean temperature, precipitation, precipitation cover, and cloud cover. We paired this with data on the Dow Jones and NASDAQ from the same period. 
@@ -19,28 +23,24 @@ After processing our data we took a look into our variables and the relation the
 
 **Findings**
 
-After we processed the data and consolidated it into one data frame, it was time to begin the exploratory analysis. The first relationship we wanted to investigate was the effect of temperature for each city on the Dow Jones Industrial Average. Our first try at this yielded no real results as it was impossible to glean any relation.
-
-```{r}
-ma_temp_plot + dow_plot
-```
+The temperature 
 
 The next thought we had was to see if this relationship presented itself through the seasons. The idea behind this was that in Spring, the temperatures are rising which might make people happier and companies more productive. We created 4 seasonal factor variables for the spring of 2021 through the winter of 2021/22. There seems to be a very strong relationship in the trend of the Dow Jones and the trend of temperature for the three cities. It is extremely likely that there are many unaccounted for factors which promote economic growth in the spring so this is not a rock-solid takeaway. Never the less, it could warrant more attention.
 
 ```{r}
-ma_temp_plot_spring + dow_plot_spring
+#ma_temp_plot_spring + dow_plot_spring
 ```
 
 Similarly, we wanted to examine the Dow Jones and temperature over the course of the Fall. In looking at the two graphs, there does not seem to be a cut and dry relationship like the one we saw in Spring. The Dow Jones experiences high volatility and a possible upwards trend while the temperature steadily drops. 
 
 ```{r}
-ma_temp_plot_fall + dow_plot_fall
+#ma_temp_plot_fall + dow_plot_fall
 ```
 
 Lastly, we wanted to explore if cloud cover over New York City was a predictor of the NASDAQ. The idea being that the more gloomy a day is in the trading capital of the world, the more likely it is that stock prices will go down. In reality, there doesn't seem to be a relationship between the two that is readily apparent. The large spike in cloud cover around the winter does seem to lineup with the peak value of the NASDAQ around the same time but without an econometric analysis, we cannot say whether or not this is true. 
 
 ```{r}
-ma_cloud_plot_nyc + ndaq_plot
+#ma_cloud_plot_nyc + ndaq_plot
 ```
 
 **Conclusion**
