--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -7,15 +7,17 @@ output: pdf_document
 
 **Introduction**
 
-An endless number of variables effect the condition of the stock market. We set out to determine a relationship between the stock market and just one of those variables. If the day-to-day emotions of traders, analysts, portfolio managers and otherwise in major financial centers are affected by the weather, that effect might be noticeable with the right visualizations. To do this, we used two years worth of historical data detailing weather data from New York City, Chicago, and Seattle. The variables measured were mean temperature, precipitation, precipitation cover, and cloud cover. We paired this with data on the Dow Jones and NASDAQ from the same period. 
+An endless number of variables effect the condition of the stock market. We set out to determine a relationship between the stock market and just one of those variables. If the day-to-day emotions of traders, analysts, portfolio managers and otherwise in major financial centers are affected by the weather, that effect might be noticeable with the right visualizations. To do this, we used two years worth of historical data detailing weather in New York City, Chicago, and Seattle. The variables measured were mean temperature, precipitation, precipitation cover, and cloud cover. We paired this with data on the Dow Jones and NASDAQ from the same period. 
 
 **Data Processing**
 
-The first step of processing the data was to only select the closing price of the Dow Jones and NASDAQ in order to get a consistent measure of the two. Then, we bound the two together to get a data frame of our two financial indicators along with the associated dates. After this, we created a unique weather data frame for each city and only took measurements from 10/12/2020 to 10/12/2022. Similarly to the financial data frame, we bound these three together into one data frame. Each measurement of the weather was split into three different columns, one for each city. This was so that we didn't have repeating dates and could graph them more like time series data. The final step of processing the data was to combine the financial and weather data frames into one final data frame. We did this by left joining the financial data frame to the weather data frame. This cut out the observations of weather variables that did not fall on a trading day but made it so we did not have any NA observations of either the Dow Jones or the NASDAQ. 
+The closing price of the Dow Jones and NASDAQ were selected in order to get a consistent measure of the two. They were then bound together to get a data frame of the two financial indicators along with the associated dates. After this, a unique weather data frame was created for each city and only took measurements from 10/12/2020 to 10/12/2022. Similarly to the financial data frame, these three were bound together into one data frame. Each measurement of the weather was split into three different columns, one for each city. This was so that they didn't have repeating dates and could be graphed as time series data. The final step of processing the data was to combine the financial and weather data frames into one final data frame. This was performed thanks to a left join of the financial data frame to the weather data frame. This cut out the observations of weather variables that did not fall on a trading day but made it so there weren't any NA observations for either the Dow Jones or the NASDAQ. 
 
 **Beginnings of Exploratory Analysis**
 
-After processing our data we took a look into our variables and the relation they had to each other. Initially we found general information that could be useful like the percentage of rain a city got over the time period, which was New York City by 0.8%. We also looked at a graph for precipitation coverage, cloud cover and temperature combining all three cities into one graph for each variable. This helped show us that we needed to graph some of the variables in a more visible way, specifically, rain cover and cloud cover. In order to show these variables we took a moving average of them as well as the temperature to see the trends better. We can see this best when comparing our initial cloud cover plot and our moving average cloud cover plot. With this moving average cloud cover graph, we can see a trend of less clouds in the summer in Seattle and more in the winter while New York City and Chicago don't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which helps them have smaller temperature spikes and dips. Finally we took a look at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. We did this by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
+After processing the data, a look was taken into the variables and the relation they had to each other. Initially, general information was found that could be useful. An example was the percentage of rain a city got over the time period. A graph was constructed to show precipitation coverage, cloud cover, and temperature for all three cities. This helped show that these needed to be graphed more clearly, specifically the variables rain cover and cloud cover. In order to show these variables a 10-day moving average of them and temperature was taken. With this moving average cloud cover graph, we can see a trend of less clouds in the summer in Seattle and more in the winter while New York City and Chicago don't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which helps them have smaller temperature spikes and dips. Finally we took a look at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. We did this by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
+
+An initial look was taken in comparing our weather variables with the indexes. We did this by first comparing the graphs we have for temperature and index. This yielded that there doesn't appear to be an overarching relation to seasonality between temperature and the index. We can then assume the same is true for the cloud cover in Seattle since that graph also follows the seasonality for temperature. With our temperature and index comparison, we did see some large downward slopes in the index when there was a large temperature dip mainly in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appears the effect is mainly when there is abnormal changes in the temperature and not the normal ups and downs that we experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison as the variance was still very high even after the moving average was applied. That being said, we did see that there is a rise in cloud cover that is very similar to the rise in the indexes in the start of 2022. This is an important note for our study because it could mean that the cloud cover could have the opposite effect on the market from what we thought it would de. We hypothesized that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover leads to people being inside and spend more time working with the markets or investing more into the market. 
 
 **Findings**
 
@@ -51,12 +53,32 @@ knitr::include_graphics("Images/cloudxndaq.png")
 
 The smoothed lines of percent cloud cover don't seem to show a distinguishable trend. This is certainly the case when comparing them to the plot of NASDAQ closing values. Because of this, no causal effect between cloud cover in US financial centers and the NASDAQ could be determined. 
 
+An unexplored aspect of the analysis was how extreme weather events related to extreme fluctuations in stock price. Three heat maps were made to investigate possible relationships. 
 
+The first heat map looked at the 90th percentile and above in terms of temperature in each of the three financial centers and the 90th percentile and above in terms index closing values. In other words, what percent of days that had extremely high temperatures compared to the average, also saw extremely high stock movements. 
 
 ```{r echo = FALSE, fig.align='center', out.width = '100%'}
 knitr::include_graphics("Images/heat_map_highs.png")
 ```
 
+The highest frequencies came from Seattle and the Dow Jones and Chicago and the NASDAQ with 15.69%. The lowest came from Chicago and the Dow Jones and New York City and the NASDAQ with 7.84%. Neither of these seemed far from what could be expected especially with the fact that only two years of data were taken into account. 
+
+The second heat map was in the same spirit as the first but instead looked at overlapping frequency of extremely cold days and extreme downwards stock movements. Extreme weather days were days in the bottom 10% of temperature and extreme stock days were in the bottom 10% of Index closing value. 
+
+```{r echo = FALSE, fig.align='center', out.width = '100%'}
+knitr::include_graphics("Images/heat_map_lows.png")
+```
+
+The highest and lowest frequencies had a slightly larger span compared to the previous heat map. The lowest frequency was between New York City and the NASDAQ with 3.92%. The highest frequency was between Chicago and the NASDAQ with 17.65%. This means that the NASDAQ didn't drop frequently on the coldest days in New York City and dropped more often than normal on the coldest days in Chicago. 
+
+The final heat map constructed looked extreme movements of both stocks and temperature (ie bottom 10th and upper 90th percentile for both). 
+
+```{r echo = FALSE, fig.align='center', out.width = '100%'}
+knitr::include_graphics("Images/heat_map_extreme.png")
+```
+
+The frequency of extreme stock movements on days with extreme temperatures seemed to be about double that of what we saw in the previous two graphs. They were also fairly similar across city and index. For this reason, no relationship between extreme temperature and extreme stock market movements could be inferred.
+
 **Conclusion**
 
-In summary, we took an initial look at comparing our weather variables with the indexes. We did this by first comparing the graphs we have for temperature and index. This yielded that there doesn't appear to be an overarching relation to seasonality between temperature and the index. We can then assume the same is true for the cloud cover in Seattle since that graph also follows the seasonality for temperature. With our temperature and index comparison, we did see some large downward slopes in the index when there was a large temperature dip mainly in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appears the effect is mainly when there is abnormal changes in the temperature and not the normal ups and downs that we experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison as the variance was still very high even after the moving average was applied. That being said, we did see that there is a rise in cloud cover that is very similar to the rise in the indexes in the start of 2022. This is an important note for our study because it could mean that the cloud cover could have the opposite effect on the market from what we thought it would de. We hypothesized that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover leads to people being inside and spend more time working with the markets or investing more into the market. 
+After visual inspection, no relationships between the Dow Jones Industrial Average or the NASDAQ indices and the weather in New York City, Chicago, and Seattle could be determined. A likely reason behind that is that the stock market is influenced massively by factors outside of the weather. This does not mean that the weather in major financial centers in the United States has no effect on the stock market but to isolate that effect would require controlling for a potentially infinite number of factors. 
