final touch ups

--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -15,9 +15,9 @@ The closing price of the Dow Jones and NASDAQ were selected in order to get a co
 
 **Beginnings of Exploratory Analysis**
 
-After processing the data, a look was taken into the variables and the relation they had to each other. Initially, general information was found that could be useful. An example was the percentage of rain a city got over the time period. A graph was constructed to show precipitation coverage, cloud cover, and temperature for all three cities. This helped show that these needed to be graphed more clearly, specifically the variables rain cover and cloud cover. In order to show these variables a 10-day moving average of them and temperature was taken. With this moving average cloud cover graph, we can see a trend of less clouds in the summer in Seattle and more in the winter while New York City and Chicago don't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which helps them have smaller temperature spikes and dips. Finally we took a look at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. We did this by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
+After processing the data, a look was taken into the variables and the relation they had to each other. Initially, general information was found that could be useful. An example was the percentage of rain a city got over the time period. A graph was constructed to show precipitation coverage, cloud cover, and temperature for all three cities. This helped show that these needed to be graphed more clearly, specifically the variables rain cover and cloud cover. In order to show these variables a 10-day moving average of them and temperature was taken. With this moving average cloud cover graph, a trend of less clouds in the summer in Seattle and more in the winter was visible, while New York City and Chicago didn't seem to follow the same patter. When doing this same process for temperature we could better relate the weather between each city. We found that Chicago had the largest range of temps followed by New York City and then Seattle. This makes sense since Seattle and New York City are closer to the water which could make them have smaller temperature spikes and dips. Finally, a look was taken at the NASDAQ and Dow Jones indexes to check if they behaved similarly despite differing in which stocks they include and their overall price. This was done by graphing each of them separately and together to see if the trends and general up and down movements were similar. They ended up being very similar which help confirm for us that the indexes are good measures for the overall economy.
 
-An initial look was taken in comparing our weather variables with the indexes. We did this by first comparing the graphs we have for temperature and index. This yielded that there doesn't appear to be an overarching relation to seasonality between temperature and the index. We can then assume the same is true for the cloud cover in Seattle since that graph also follows the seasonality for temperature. With our temperature and index comparison, we did see some large downward slopes in the index when there was a large temperature dip mainly in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appears the effect is mainly when there is abnormal changes in the temperature and not the normal ups and downs that we experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison as the variance was still very high even after the moving average was applied. That being said, we did see that there is a rise in cloud cover that is very similar to the rise in the indexes in the start of 2022. This is an important note for our study because it could mean that the cloud cover could have the opposite effect on the market from what we thought it would de. We hypothesized that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover leads to people being inside and spend more time working with the markets or investing more into the market. 
+An initial look was taken in comparing the weather variables with the indexes. This was done by first comparing the graphs for temperature and the indexes. There didn't appear to be an overarching relation to seasonality between temperature and the index. It was assumed the same was true for the cloud cover in Seattle since that graph also followed the seasonality for temperature. With our temperature and index comparison, there were some large downward slopes in the index when there was a large temperature dip. This was most prominent in Chicago as that was the location with the largest drops even after adjusting with the moving average. This shows that there may be some sway in the market based on the temperature in major financial cities. That being said, it appeared the effect mainly occurred when there were abnormal changes in the temperature and not the normal ups and downs that were experience with the changing of seasons. The cloud cover data was much harder to do a visual comparison with as the variance was still very high even after the moving average was applied. That being said, there was a rise in cloud cover that was very similar to the rise in the indexes in the start of 2022. This was an important note for the study because it could mean that the cloud cover could have the opposite effect on the market from what was initial expected. The initial hypothesis was that more clouds would lead to a drop in the stocks because of the perceived bad weather that large amounts of cloud cover bring. Based on this comparison of the graphs, it could instead be the case that the increased cloud cover led to people being inside and spending more time working with the markets or investing more into the market. 
 
 **Findings**
 
